Add AI-powered listing generation pipeline with cross-origin data sharing
Implements complete flow from YOLO scan → AI analysis → listing creation:

Backend (main.py):
- Add /api/analyze-scan endpoint for AI processing of scan data
  - Groq generates compelling listing titles from detected objects
  - PricingService calculates market-based pricing
  - Maps YOLO amenities to UI amenity IDs (tv, kitchen, pool, etc.)
- Add WebSocket /ws/scan for real-time YOLO object detection
- Add scan session management endpoints for cross-origin data transfer
  - /api/scan/store-temp/{session_id} - store scan results
  - /api/scan/retrieve/{session_id} - fetch scan results
  - Solves localStorage issue between port 8000 and 3000
- Initialize YOLOService and GeocodingService

Frontend (review/page.tsx):
- Fetch scan data from backend via session_id URL param
- Trigger AI analysis when scan data loads
- Add inline location editing with live map updates
- Add cover photo selection functionality
- Save complete listing data to localStorage on publish

Frontend (success/page.tsx):
- Display actual cover photo from published listing
- Show all listing details (title, price, location, room counts)

Frontend (sell/page.tsx):
- Update scan button to redirect to camera_scan.html

camera_scan.html:
- Store results via backend endpoint instead of localStorage
- Redirect to review page with scan_session param

Sponsors: Anthropic (Claude Vision), Groq (title generation, Whisper), YOLOv8 (detection)

By: Aswin Surya

--- a/backend/camera_scan.html
+++ b/backend/camera_scan.html
@@ -533,22 +533,35 @@
 
             isScanning = false;
 
-            // Show results
-            alert(`Scan Complete!\n\nProperty: ${results.summary.property_type}\nBedrooms: ${results.summary.bedrooms}\nBathrooms: ${results.summary.bathrooms}\nAmenities: ${results.amenities.length}\nImages: ${results.images.length}\n\nCheck console for full JSON`);
+            // Store results temporarily on backend (not localStorage due to CORS)
+            // Instead, redirect with session_id so frontend can fetch from backend
+            const sessionId = results.session_id;
 
-            // Reset buttons
-            document.getElementById('start-btn').disabled = false;
-            document.getElementById('start-btn').style.display = 'block';
-            document.getElementById('stop-btn').disabled = true;
-            document.getElementById('stop-btn').style.display = 'none';
+            // Show completion message
+            const message = `Scan Complete!\n\n` +
+                `Property: ${results.summary?.property_type || 'Unknown'}\n` +
+                `Bedrooms: ${results.summary?.bedrooms || 0}\n` +
+                `Bathrooms: ${results.summary?.bathrooms || 0}\n` +
+                `Amenities: ${results.amenities?.length || 0}\n` +
+                `Images: ${results.images?.length || 0}\n\n` +
+                `Redirecting to listing creation...`;
 
-            // You can now POST this JSON to your listing endpoint
-            // Example:
-            // fetch('/api/create-listing', {
-            //     method: 'POST',
-            //     headers: { 'Content-Type': 'application/json' },
-            //     body: JSON.stringify(finalResults)
-            // });
+            alert(message);
+
+            // Store full scan data in backend's memory temporarily
+            // Then redirect to review page with session_id
+            fetch(`http://localhost:8000/api/scan/store-temp/${sessionId}`, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify(results)
+            }).then(() => {
+                // Redirect to Next.js review page with session_id
+                window.location.href = `http://localhost:3000/sell/review?scan_session=${sessionId}`;
+            }).catch(err => {
+                console.error('Error storing scan data:', err);
+                // Still redirect with session_id, review page can fetch it
+                window.location.href = `http://localhost:3000/sell/review?scan_session=${sessionId}`;
+            });
         }
 
         function showError(title, message) {
